--- a/help.gmi
+++ b/help.gmi
@@ -17,7 +17,7 @@
 
 ## Optional
 
-  -a, --absolute - no value, absolute filepath in links (ignored on --keep), disabled by default
+  -a, --absolute - no value, links to absolute filepath (ignored on --keep), disabled by default
   -c, --crawl    - no value, crawl document links (entire capsule download), disabled by default
   -d, --delay    - integer, pause between requests (seconds), 1 by default
   -i, --index    - string, index filename of directory listing, index.gmi by default
