--- a/help.gmi
+++ b/help.gmi
@@ -19,7 +19,7 @@
 
   -a, --absolute - no value, links to absolute filepath (ignored on --keep), disabled by default
   -c, --crawl    - no value, crawl document links (entire capsule download), disabled by default
-  -d, --delay    - integer, pause between requests (seconds), 1 by default
+  -d, --delay    - integer, pause between requests to prevent abuse (seconds), 1 by default
   -i, --index    - string, index filename of directory listing, index.gmi by default
   -h, --help     - no value, show available commands
   -k, --keep     - no value, keep original links (--crawl mode only), disabled by default
